can choose schema

--- a/server/local_config.py.tmpl
+++ b/server/local_config.py.tmpl
@@ -2,3 +2,7 @@
 # -*- coding: utf-8 -*-
 
 DEBUG = True
+DATABASE_BACKEND = "sqlite3"
+DATABASE_CONNECTION_PARAMS = dict(
+        database="tests/test.db"
+        )
